# generaite_todo_app_2

./: .aider.chat.history.md  .aider.input.history  .env.example  .gitignore  Cargo.toml  watch.sh
config/: default.toml  development.toml  production.toml  test.toml
documentation/: README.md
documentation/design/: architecture.md  code_standards.md  data_model.md  documentation_plan.md  folder_structure.md  tech_stack.md  test_strategy.md  user_stories.md
documentation/process/: code standard guidelines.md  process.md
entities/: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_task.rs
src/: cli.rs  config.rs  main.rs  web_server.rs
src/cli/: db_commands.rs
src/services/: database.rs  mod.rs  web_server.rs
src/services/repositories/: mod.rs
tests/: main_test.rs  utils.rs
