[package]
name = "gen_todo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
config = "0.13.3"
sea-orm = "1.0.0"
sea-orm-migration = "1.0.0"
serde = { version = "1.0.208", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
uuid = "1.10.0"

[dev-dependencies]
tokio-test = "0.4.4"
