[package]
name = "gen_todo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
config = "0.13.3"
sea-orm = { version = "1.0.0", features = ["runtime-tokio-rustls", "macros", "sqlx-postgres"] }
sea-orm-migration = "1.0.0"
serde = { version = "1.0.208", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
uuid = "1.10.0"
postgres = "0.19.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.79"
async-trait = "0.1"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4.4"
